--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2 {
+  color: #304759;
+}
+
+p {
+  color: #1a1a1a;
+}
 
 /* Home */
 /* Products */
@@ -5,16 +16,29 @@
 .product-container {
   display: flex;
   flex-direction: row;
-  margin: 50px;
+  margin: 30px;
 }
 
 .left-container {
   width: 40%;
   height: 100vh;
+  margin:0px 80px 0px 20px;
 }
 
 .right-container {
   width: 60%;
 }
+
+button {
+  background-color: #8DC63F; 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 
 /* Contact Us */
