--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,27 @@ p {
 }
 
 /* Home */
+.home{
+  position: relative;
+  text-align: left;
+  color: white;
+}
+
+.mission {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
+/* Navbar */
+
+.navbar {
+  display: flex;
+  margin: 10px;
+  justify-content: space-around;
+  list-style: none;
+}
+
 /* Products */
 
 .product-container {
@@ -21,7 +42,6 @@ p {
 
 .left-container {
   width: 40%;
-  height: 100vh;
   margin:0px 80px 0px 20px;
 }
 
@@ -38,7 +58,28 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  margin-top: 25px;
+}
+
+a {
+  text-decoration: none;
 }
 
 
 /* Contact Us */
+
+/* Footer */
+.footer {
+  display: flex; 
+  color: #8DC63F;
+  justify-content: center;
+}
+
+.ig, .fb {
+  margin: 20px 40px 20px 40px;
+}
+
+.myideas {
+  text-align: center;
+  color: #304759;
+}
